exclusão de arquivos desnecessários e correção na labem EM_BRANCO

--- a/gera_template_municipio/templates_my_maps/gera_template_municipio_por_regional_unificado.ipynb
+++ b/gera_template_municipio/templates_my_maps/gera_template_municipio_por_regional_unificado.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,24 +13,6 @@
     "import re\n",
     "\n",
     "warnings.filterwarnings(\"ignore\", category=FutureWarning)\n",
-    "\n",
-    "import pandas as pd\n",
-    "\n",
-    "def processar_e_salvar_excel(caminho_arquivo, nome_planilha_saida='BASE LIMPA'):\n",
-    "    df_locais = pd.read_excel(caminho_arquivo, sheet_name='LOCAIS')\n",
-    "    df_cidades = pd.read_excel(caminho_arquivo, sheet_name='CIDADES')\n",
-    "    df_distribuidores = pd.read_excel(caminho_arquivo, sheet_name='DISTRIBUIDORES')\n",
-    "\n",
-    "    locais_cidades = pd.merge(df_locais, df_cidades, on='MUNICIPIO / UF', how='outer')\n",
-    "    locais_distribuidores = pd.merge(locais_cidades, df_distribuidores, on='DISTRIBUIDOR', how='outer')\n",
-    "\n",
-    "    locais_distribuidores = locais_distribuidores.drop(['MUNICIPIO_y', 'UF_y'], axis=1)\n",
-    "    locais_distribuidores = locais_distribuidores.rename(columns={'MUNICIPIO_x': 'MUNICIPIO', 'UF_x': 'UF', 'UNIDADE':'REGIONAL'})\n",
-    "\n",
-    "    locais_distribuidores['POPULACAO'] = locais_distribuidores['POPULACAO'].fillna(0).astype(int)\n",
-    "\n",
-    "    caminho_saida = caminho_arquivo.replace('.xlsx', '_processado.xlsx')\n",
-    "    locais_distribuidores.to_excel(caminho_saida, sheet_name=nome_planilha_saida, index=False)\n",
     "\n",
     "def aplicar_mascara_contato(contato):\n",
     "    if pd.notna(contato):\n",
@@ -84,16 +66,16 @@
     "    # Replace NaN in 'RESPONSAVEL' column with 'EM BRANCO'\n",
     "    #summary_df.dropna(subset=['REGIONAL'], inplace=True)\n",
     "\n",
-    "    summary_df['REGIONAL'].fillna('EM BRANCO', inplace=True)\n",
-    "    summary_df['DISTRIBUIDOR'].fillna('EM BRANCO', inplace=True)\n",
-    "    summary_df['RESPONSAVEL'].fillna('EM BRANCO', inplace=True)\n",
-    "    summary_df['CONTATO1'].fillna('EM BRANCO', inplace=True)\n",
-    "    summary_df['CONTATO2'].fillna('EM BRANCO', inplace=True)\n",
-    "    summary_df['ENDERECO'].fillna('EM BRANCO', inplace=True)\n",
-    "    summary_df['CATEGORIA'].fillna('EM BRANCO', inplace=True)\n",
+    "    summary_df['REGIONAL'].fillna('EM_BRANCO', inplace=True)\n",
+    "    summary_df['DISTRIBUIDOR'].fillna('EM_BRANCO', inplace=True)\n",
+    "    summary_df['RESPONSAVEL'].fillna('EM_BRANCO', inplace=True)\n",
+    "    summary_df['CONTATO1'].fillna('EM_BRANCO', inplace=True)\n",
+    "    summary_df['CONTATO2'].fillna('EM_BRANCO', inplace=True)\n",
+    "    summary_df['ENDERECO'].fillna('EM_BRANCO', inplace=True)\n",
+    "    summary_df['CATEGORIA'].fillna('EM_BRANCO', inplace=True)\n",
     "\n",
-    "    summary_df['CONTATO1'] = summary_df['CONTATO1'].apply(aplicar_mascara_contato)\n",
-    "    summary_df['CONTATO2'] = summary_df['CONTATO2'].apply(aplicar_mascara_contato)\n",
+    "    summary_df['CONTATO1'] = summary_df['CONTATO1']#.apply(aplicar_mascara_contato)\n",
+    "    summary_df['CONTATO2'] = summary_df['CONTATO2']#.apply(aplicar_mascara_contato)\n",
     "\n",
     "    unique_razao_social = summary_df['DISTRIBUIDOR'].unique()\n",
     "    color_mapping = {razao: f\"{hash(razao) % 0xffffff:06x}ff\" for razao in unique_razao_social}\n",
@@ -147,8 +129,8 @@
     "    return df_merged\n",
     "\n",
     "def gerar_estilos(categoria, cor, transparencia, espessura):\n",
-    "    if categoria == '':\n",
-    "        cor = 'FFFFFF'\n",
+    "    if categoria == 'EM_BRANCO':\n",
+    "        cor = 'F1EE8Eff'\n",
     "    else:\n",
     "        cor = cor\n",
     "\n",
@@ -289,16 +271,14 @@
     "    transparencia = 0.8\n",
     "    espessura = 0.2\n",
     "\n",
-    "    caminho_arquivo = r'C:\\Users\\bruno\\OneDrive\\Área de Trabalho\\Fluxo de trabalho\\mapeamento\\excel\\BRUNO.xlsx'\n",
-    "    processar_e_salvar_excel(caminho_arquivo)\n",
-    "    \n",
+    "    caminho_arquivo = r'C:\\Users\\bruno\\OneDrive\\Área de Trabalho\\Fluxo de trabalho\\mapeamento\\excel\\BRUNO.xlsx'    \n",
     "    output_file_path = r'C:\\Users\\bruno\\OneDrive\\Área de Trabalho\\Fluxo de trabalho\\mapeamento\\saida\\distribuidores_kml\\unificado\\distribuidores.kml'\n",
     "    diretorio_a_limpar = r'C:\\Users\\bruno\\OneDrive\\Área de Trabalho\\Fluxo de trabalho\\mapeamento\\saida\\distribuidores_kml\\unificado'\n",
     "    diretorio_kml = r'C:\\Users\\bruno\\OneDrive\\Área de Trabalho\\Fluxo de trabalho\\mapeamento\\kml-brasil-master\\lib\\2010\\municipios'\n",
     "\n",
     "    limpa_diretorio(diretorio_a_limpar)\n",
     "\n",
-    "    df = pd.read_excel(r'C:\\Users\\bruno\\OneDrive\\Área de Trabalho\\Fluxo de trabalho\\mapeamento\\excel\\localidades.xlsx', sheet_name='BASE LIMPA')\n",
+    "    df = pd.read_excel(caminho_arquivo, sheet_name='BASE LIMPA')\n",
     "\n",
     "    df_result = merge_arquivos(df, diretorio_kml)    \n",
     "    create_combined_template(df_result, output_file_path, transparencia, espessura)\n",
@@ -308,27 +288,6 @@
     "\n",
     "    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
